Fix flickering fixed-bottom bar

--- a/arsnova.click/client/layout/global/styles/themeSwitcher.scss
+++ b/arsnova.click/client/layout/global/styles/themeSwitcher.scss
@@ -341,6 +341,8 @@
 		$thmgray: #4a5c66;
 
 		$background-color: $thmgreen;
+		$bg-nav-row: $background-color;
+		$bg-container: $background-color;
 
 		$fg_quiz-name: #b5003f;
 		$default: #d3d3d3; /* light grey */
@@ -416,16 +418,17 @@
 		$fg-success: darken($success, 5);
 	}
 
-	body {
-		background-color: $background-color;
-	}
-	*:fullscreen,
-	*:-webkit-full-screen,
-	*:-moz-full-screen {
-		background-color: $background-color;
-	}
-
 	.#{$name} {
+		height: 100%;
+		width: 100%;
+		position: absolute;
+		background: $background-color;
+
+		*:fullscreen,
+		*:-webkit-full-screen,
+		*:-moz-full-screen {
+			background-color: $background-color;
+		}
 		.text-light, a.text-light, a:hover.text-light, a:active.text-light, a:visited.text-light, a:focus.text-light {
 			color: $fg-text-light;
 		}
